# reverse-api-engineer

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SETUP.md  SYSTEM_DESIGN.md  System_Design.md  pyproject.toml
backend/: pyproject.toml
backend/rae_agent/: __init__.py  debug_log.py  prompts.py  protocol.py  server.py  session.py
backend/tests/: test_protocol.py  test_server_auth.py  test_server_resolution.py  test_session_dirs.py
chrome-extension/public/: manifest.json
design/: PROMPT.md  README.md  design-system.md  examples.md
examples/apple/: api_client.py
examples/autoscout24/: api_client.py
macos/: .gitignore  Package.resolved  Package.swift
macos/Resources/: AppIcon.icns  Info.plist  rae.entitlements
macos/scripts/: build-app.sh  build-icon.sh  dev-setup.sh  make-dmg.sh  render-icon.swift  (+1 more)
scripts/: clean_build.sh
tests/: test_agent_browser.py  test_agent_browser_bundle.py  test_auto_engineer.py  test_base_engineer.py  test_cli_agent_json.py  test_cli_followups.py  test_cli_json_stream.py  test_cli_manual_missing_extra.py  test_cli_ollama.py  test_cli_settings.py  test_collector.py  test_config.py  test_cursor_engineer.py  test_engineer.py  test_manual_browser_startup_failure.py  test_native_host.py  test_ollama_runtime.py  test_opencode_engineer.py  test_opencode_runtime.py  test_opencode_ui.py  test_prompts.py  test_run_command.py  test_tui.py  test_utils.py
web/: IMPLEMENTATION_PLAN.md  package-lock.json  package.json
website/: .gitignore  README.md  next.config.mjs  package.json  pnpm-lock.yaml  wrangler.jsonc
(+174 files in other folders)
